Crea storage.js guarda monedas y nombre de usuario

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       <div id="settingsView" class="view hidden">
         <div class="panel">
           <h1>Ajustes</h1>
-          <p>Panel de control (placeholder)</p>
+          <div class="user-settings">
+            <label for="usernameInput">Nombre:</label>
+            <input type="text" id="usernameInput" placeholder="Tu nombre">
+            <p>Monedas totales: <span id="totalPointsDisplay">0</span></p>
+          </div>
           <button id="btnCloseSettings">Cerrar</button>
         </div>
       </div>
