añade la función de seleccionar personajes para el juego

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- Vista configuración -->
       <div id="settingsView" class="view hidden">
         <div class="panel">
-          <h1>Récords</h1>
+          <h1>Configuración</h1>
           
           <div class="user-settings">
             <label>Nombre:</label>
@@ -28,6 +28,8 @@
               Lingotes: <span id="lingotesDisplay">0</span> 🧱
             </p>
           </div>
+
+          <div id="characterList"></div>
 
           <div class="ranking-container">
             <h3>Top 10 Partidas</h3>
