Crea LICENSE y añade créditos

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
           </div>
 
           <button id="btnCloseSettings">Volver al Juego</button>
+          <div class="credits">
+            <p>Game Design by Esther Lecina</p>
+            <p>
+              Assets by
+              <a href="https://www.freepik.com" target="_blank">Freepik</a>
+            </p>
+            <p class="ai-note">Powered by Human Logic & AI Assistance</p>
+          </div>
         </div>
       </div>
     </div>
