Añade una X para cerrar settings y edita comentarios

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <!-- Vista configuración -->
       <div id="settingsView" class="view hidden">
         <div class="panel">
+          <button id="btnCloseX" class="close-btn-x">&times;</button>
           <h1>Configuración</h1>
 
           <div class="user-settings">
